--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,24 @@ version: '3.9'
 services:
   backend:
     build: ./backend
+    image: intigamm/file_sharing_backend
     env_file:
       - .env
     ports:
       - "8000:8000"
     depends_on:
       - database
+    restart: on-failure
+    
+    command: >
+      bash -c "
+        python manage.py migrate &&
+        python manage.py runserver 0.0.0.0:8000
+      "
+
   frontend:
     build: ./frontend
+    image: intigamm/file_sharing_frontend
     ports:
       - "3000:3000"
     depends_on:
